0.2.9
- Fixed issue with BOM headers with native file wrapper (Issue #52)
- Added support for bookmarks
- Added clipboard content dialog

0.2.8.1 (2023-05-25)
- Fixed plugin breaks VCS history log reading (Issue #51)

0.2.8 (2023-05-19)
- Added edit as binary action for columns in database view
- Added byte-to-byte compare diff option
- Added integration options page
- Reworked save on close
- Added reload file action (issue #49)
- Fixed illegal argument exception (issue #50)

0.2.7 (2022-12-08)
- Added byte array support for some fields for Rider/CLion/GoLand (debug tree child nodes extraction)
- Minor layout fix (issue #45)
- Fixed settings save (issue #44)
- Fixed event context does not match assertion (issue #43)
- Fixed User Data exception (issue #42)

0.2.6 (2022-05-22)
- Fixed native file mode (issue #39)
- Added options page
- Added action for online help/manual
- Added edit selection action
- Added API: view binary data

0.2.5 (2021-11-06)
- New app icon
- Added templates for profiles
- Added insert data dialog
- Added files compare dialog
- Fixed issues with binary file type (issue #36)
- Fixed issue with transparency (issue #38)
- Fixed issue with opening zip files

0.2.4 (2021-04-11)
- Added string field in values panel (issue #8)
- Fixed 2021.1: Can't close any tabs once a binary file is opened (issue #35)

0.2.3 (2020-07-30)
- Fixed debugger array support for PHP
- Added binary file type (issue #30)

0.2.2 (2020-01-25)
- Minor GUI improvements
- Support for multiple decoders in debugging view
- Display the number of bytes selected (issue #26)
- Fixed opening via dialog crashes IntelliJ (mac) (issue #22)
- Fixed "HIDE_DEFAULT_EDITOR is supported only for DumbAware providers" error message (issue #24)
- Fixed NullPointerException when trying to hex-view bytearray in Debug mode (issue #27)
- Fixed Editor stops responding when I use Find (issue #19)
- Fixed Cursor position is lost if you switch tabs (issue #25)

0.2.1 (2019-08-22)
- Minor GUI improvements