@@ -41,7 +41,10 @@ Sources: <a href="https://github.com/exbin/bined-intellij-plugin">https://github
     ]]></description>
 
     <change-notes><![CDATA[
-<ul><li>-</li>
+<ul><li>Fixed issue with BOM headers with native file wrapper (issue #52)</li>
+<li>Partial mitigation to file locking issue (issue #34)</li>
+<li>Added support for bookmarks</li>
+<li>Added clipboard content dialog</li>
 </ul>
     ]]>
     </change-notes>
