@@ -1,5 +1,6 @@
 0.2.9
-- Fixed issue with BOM headers with native file wrapper (Issue #52)
+- Fixed issue with BOM headers with native file wrapper (issue #52)
+- Partial mitigation to file locking issue (issue #34)
 - Added support for bookmarks
 - Added clipboard content dialog
 
